# edgetech-http-uploader

./: .env  CONTRIBUTING.md  README.md  docker-compose.yaml  example.env
.github/workflows/: dockerbuild.yml  releasetag.yml
http-uploader/: Dockerfile  http_uploader_pub_sub.py  pyproject.toml  requirements.txt
httpuploader/: http_uploader_pub_sub.py
