[tool.poetry]
name = "http-uploader"
version = "0.1.0"
description = "MQTT client to read data from telemetry topic and POST it to an HTTP endpoint"
authors = ["arichadda <ari.chadda@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.11"
schedule = "^1.1.0"
httpx = "^0.23.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
